@@ -1,7 +1,8 @@
 10/5/17
- - moved beamOn in interactive mode in the GUI, which instantiate a new grun
+ - beamOn() is now part of grun, which also have a gDynamic map and will take care of plugin initialization for each run
  - GDynamic does not need to be a shared_ptr
  - added event action
+ - both interactive and batch mode use GRuns:: processEvents() to activate beamOn()
 
 9/20/17
  - GDetectorConstruction inherits from gFlowMessage
